Fix plot coordinates in Week 1 notebook for correct visualization of fishing net strands

--- a/Week1_Build_a_Better_Fishing_Net.ipynb
+++ b/Week1_Build_a_Better_Fishing_Net.ipynb
@@ -50,7 +50,7 @@
     "        for c in range(cols):\n",
     "            # horizontal strand\n",
     "            if c < cols-1:\n",
-    "                plt.plot([c, c+1], [rows-1-r]*2, 'k-')\n",
+    "                plt.plot([c, c+1], [rows-r]*2, 'k-')\n",
     "            # vertical strand\n",
     "            if r < rows-1:\n",
     "                plt.plot([c]*2, [rows-1-r, rows-r], 'k-')\n",
