Enhance Week 1 notebook with improved markdown formatting, added interactive features, and refined code for drawing fishing nets and checking connectivity

--- a/Week1_Build_a_Better_Fishing_Net.ipynb
+++ b/Week1_Build_a_Better_Fishing_Net.ipynb
@@ -2,215 +2,216 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bb4d1f17",
+   "id": "2f1c2cf1",
    "metadata": {},
    "source": [
     "# Week 1 – Build a Better Fishing Net\n",
-    "### *Exploring grids, cuts & connectivity*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea7a97ba",
-   "metadata": {},
-   "source": [
-    "> **Read‑only starter file**  \n",
-    "> Click **File ▸ Save a Copy** (or **Duplicate** button if you see one) so you can experiment freely without changing the master version.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31f1c028",
-   "metadata": {},
-   "source": [
-    "## The Story  \n",
-    "Fishing communities around the world weave rectangular nets from ropes knotted into a grid.  \n",
-    "A torn net lets fish escape!  \n",
-    "  \n",
-    "Your mission: **Explore how many strands you can cut before the net falls into two separate pieces.**  \n",
+    "### Exploring grids, cuts & connectivity\n",
     "\n",
-    "**You will learn**  \n",
-    "* how to describe a grid using points (*nodes*) and strands (*edges*)  \n",
-    "* what it means for a structure to stay **connected**  \n",
-    "* how to use sliders and simple Python code to model & test ideas  \n"
+    "> **Starter notebook – please duplicate**\n",
+    "> Go to **File ▸ Save a Copy** (or use a **Duplicate** button) before editing so you keep your own version.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf08e88",
+   "metadata": {},
+   "source": [
+    "## The Story\n",
+    "Fishing villages weave rectangular nets by tying ropes into a grid of knots.\n",
+    "A torn net lets fish escape – and you lose dinner!\n",
+    "\n",
+    "**Mission**: Explore **how many strands you can cut, and which ones, before the net falls into two separate pieces**.\n",
+    "\n",
+    "**You will practice**\n",
+    "- Visual reasoning with grids\n",
+    "- Graph ideas: *nodes*, *edges*, *connectedness*\n",
+    "- A first taste of Python & interactive widgets\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61907984",
+   "id": "de25c2e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# Interactive backend for Matplotlib – required on Binder\n",
+    "%matplotlib widget\n",
     "\n",
-    "def draw_intact_net(rows=5, cols=7):\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import ipywidgets as widgets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a187975f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_intact_net(rows=5, cols=7, lw=2):\n",
+    "    \"\"\"Draw a fresh rows×cols fishing net.\"\"\"\n",
     "    plt.figure(figsize=(cols, rows))\n",
     "    for r in range(rows):\n",
     "        for c in range(cols):\n",
     "            # horizontal strand\n",
-    "            if c < cols-1:\n",
-    "                plt.plot([c, c+1], [rows-r]*2, 'k-')\n",
+    "            if c < cols - 1:\n",
+    "                plt.plot([c, c + 1], [rows - r]*2, 'k-', linewidth=lw)\n",
     "            # vertical strand\n",
-    "            if r < rows-1:\n",
-    "                plt.plot([c]*2, [rows-1-r, rows-r], 'k-')\n",
-    "    plt.title(\"A brand‑new fishing net – no cuts yet!\")\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.show()\n",
-    "\n",
-    "draw_intact_net()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8570c839",
-   "metadata": {},
-   "source": [
-    "### Predict  \n",
-    "*If you cut **one** strand, can the net ever split? What about **ten** strands?*  \n",
-    "Type your guess here before you test.  \n"
+    "            if r < rows - 1:\n",
+    "                plt.plot([c]*2, [rows - 1 - r, rows - r], 'k-', linewidth=lw)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('A brand‑new fishing net – no cuts yet!')\n",
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462a99c2",
+   "id": "12dbb18f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "from ipywidgets import interact, IntSlider\n",
-    "\n",
-    "ROWS = 5\n",
-    "COLS = 7\n",
-    "\n",
-    "# build the list of all strands (edges)\n",
-    "edges = []\n",
-    "for r in range(ROWS):\n",
-    "    for c in range(COLS):\n",
-    "        if c < COLS - 1:       # horizontal\n",
-    "            edges.append(((r, c), (r, c+1)))\n",
-    "        if r < ROWS - 1:       # vertical\n",
-    "            edges.append(((r, c), (r+1, c)))\n",
-    "\n",
-    "def draw_net(cuts=0, seed=0):\n",
-    "    random.seed(seed)\n",
-    "    cut_edges = random.sample(edges, k=cuts)\n",
-    "    kept_edges = [e for e in edges if e not in cut_edges]\n",
-    "    \n",
-    "    plt.figure(figsize=(COLS, ROWS))\n",
-    "    # draw kept strands\n",
-    "    for (r1, c1), (r2, c2) in kept_edges:\n",
-    "        plt.plot([c1, c2], [ROWS-1-r1, ROWS-1-r2], 'k-')\n",
-    "    # draw cut strands\n",
-    "    for (r1, c1), (r2, c2) in cut_edges:\n",
-    "        plt.plot([c1, c2], [ROWS-1-r1, ROWS-1-r2], 'r--', alpha=0.5)\n",
-    "        \n",
-    "    plt.axis(\"off\")\n",
-    "    plt.title(f\"{cuts} strand(s) cut (red dashed)\")\n",
-    "    plt.show()\n",
-    "\n",
-    "interact(draw_net,\n",
-    "         cuts=IntSlider(min=0, max=20, step=1, value=0),\n",
-    "         seed=IntSlider(min=0, max=99, step=1, value=0));\n"
+    "draw_intact_net()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "731c71b7",
+   "id": "6ec81167",
    "metadata": {},
    "source": [
-    "### When does the net really split?  \n",
-    "A net **splits** when you can find at least **two knots** that are no longer connected by any path of intact strands.  \n",
-    "In graph theory words: the grid becomes **disconnected**.  \n"
+    "### Predict\n",
+    "If you cut **one** strand, can the net ever split? What about **ten** strands?\n",
+    "Write your guess before you test:\n",
+    "\n",
+    "`Your prediction:`\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448301af",
+   "id": "1a94f14d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's add a simple connectivity checker using depth‑first search (DFS)\n",
-    "def build_graph(kept_edges):\n",
-    "    graph = {}\n",
-    "    for (r1, c1), (r2, c2) in kept_edges:\n",
-    "        graph.setdefault((r1, c1), []).append((r2, c2))\n",
-    "        graph.setdefault((r2, c2), []).append((r1, c1))\n",
-    "    return graph\n",
+    "# -------------------------------------------------------------\n",
+    "# Click‑to‑Cut Fishing Net Explorer\n",
+    "# -------------------------------------------------------------\n",
+    "ROWS, COLS = 5, 7  # change me!\n",
+    "\n",
+    "def all_edges(rows, cols):\n",
+    "    e = []\n",
+    "    for r in range(rows):\n",
+    "        for c in range(cols):\n",
+    "            if c < cols - 1:   # horizontal\n",
+    "                e.append(((r, c), (r, c + 1)))\n",
+    "            if r < rows - 1:   # vertical\n",
+    "                e.append(((r, c), (r + 1, c)))\n",
+    "    return e\n",
+    "\n",
+    "edges = all_edges(ROWS, COLS)\n",
+    "edge2line = {}\n",
+    "cut_edges = set()\n",
     "\n",
     "def is_connected(kept_edges):\n",
-    "    graph = build_graph(kept_edges)\n",
-    "    if not graph:\n",
+    "    if not kept_edges:\n",
     "        return False\n",
-    "    \n",
+    "    graph = {}\n",
+    "    for a, b in kept_edges:\n",
+    "        graph.setdefault(a, []).append(b)\n",
+    "        graph.setdefault(b, []).append(a)\n",
     "    start = next(iter(graph))\n",
-    "    visited = set()\n",
-    "    stack = [start]\n",
+    "    seen, stack = set(), [start]\n",
     "    while stack:\n",
-    "        node = stack.pop()\n",
-    "        if node in visited:\n",
+    "        n = stack.pop()\n",
+    "        if n in seen:\n",
     "            continue\n",
-    "        visited.add(node)\n",
-    "        stack.extend(graph.get(node, []))\n",
-    "    return len(visited) == ROWS * COLS   # all knots reached\n",
+    "        seen.add(n)\n",
+    "        stack.extend(graph[n])\n",
+    "    return len(seen) == ROWS * COLS\n",
     "\n",
-    "# interactive checker\n",
-    "from ipywidgets import interact, IntSlider, Checkbox\n",
+    "fig, ax = plt.subplots(figsize=(COLS, ROWS))\n",
+    "ax.set_aspect('equal')\n",
+    "ax.axis('off')\n",
+    "ax.set_xlim(-0.5, COLS + 0.5)\n",
+    "ax.set_ylim(-0.5, ROWS + 0.5)\n",
     "\n",
-    "def explore_connectivity(cuts=0, seed=0, show_plot=True):\n",
-    "    random.seed(seed)\n",
-    "    cut_edges = random.sample(edges, k=cuts)\n",
-    "    kept_edges = [e for e in edges if e not in cut_edges]\n",
-    "    if show_plot:\n",
-    "        draw_net(cuts=cuts, seed=seed)\n",
-    "    print(\"Is the net still in one piece? ➜\", \"YES\" if is_connected(kept_edges) else \"NO\")\n",
+    "def draw_grid():\n",
+    "    edge2line.clear()\n",
+    "    for (a, b) in edges:\n",
+    "        x = [a[1], b[1]]\n",
+    "        y = [ROWS - a[0], ROWS - b[0]]\n",
+    "        line, = ax.plot(x, y, 'k-', linewidth=2, picker=5)\n",
+    "        edge2line[(a, b)] = line\n",
+    "    fig.canvas.draw_idle()\n",
     "\n",
-    "interact(explore_connectivity,\n",
-    "         cuts=IntSlider(min=0, max=20, step=1, value=0),\n",
-    "         seed=IntSlider(min=0, max=99, step=1, value=0),\n",
-    "         show_plot=Checkbox(value=True, description='Show net'));\n"
+    "def update_status():\n",
+    "    kept = [e for e in edges if e not in cut_edges]\n",
+    "    ok = is_connected(kept)\n",
+    "    message = f\"<b>Cuts:</b> {len(cut_edges)} <b>Net intact?</b> \"\n",
+    "    message += \"✅ YES\" if ok else \"<span style='color:red;font-weight:bold;'>❌ NO – It split!</span>\"\n",
+    "    status.value = message\n",
+    "\n",
+    "def on_pick(event):\n",
+    "    edge = next(e for e, l in edge2line.items() if l is event.artist)\n",
+    "    if edge in cut_edges:\n",
+    "        cut_edges.remove(edge)\n",
+    "        edge2line[edge].set(color='k', linestyle='-')\n",
+    "    else:\n",
+    "        cut_edges.add(edge)\n",
+    "        edge2line[edge].set(color='r', linestyle='--')\n",
+    "    update_status()\n",
+    "    fig.canvas.draw_idle()\n",
+    "\n",
+    "draw_grid()\n",
+    "fig.canvas.mpl_connect('pick_event', on_pick)\n",
+    "\n",
+    "status = widgets.HTML()\n",
+    "update_status()\n",
+    "\n",
+    "reset_btn = widgets.Button(description='Reset net', button_style='info')\n",
+    "def _reset(b):\n",
+    "    cut_edges.clear()\n",
+    "    for l in edge2line.values():\n",
+    "        l.set(color='k', linestyle='-')\n",
+    "    update_status()\n",
+    "    fig.canvas.draw_idle()\n",
+    "reset_btn.on_click(_reset)\n",
+    "\n",
+    "display(widgets.VBox([status, reset_btn]))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b9443d1",
+   "id": "a0ae960e",
    "metadata": {},
    "source": [
-    "## Challenge Problems  \n",
-    "\n",
-    "1. **Find the tipping point** – For the 5 × 7 grid, what is the *largest* number of strands you have managed to cut while the net stayed in one piece?  \n",
-    "2. **Guarantee a split** – What is the *smallest* number of strands you can cut and be **certain** the net will split, no matter which strands you choose?  \n",
-    "3. **Generalise** – Try changing `ROWS` and `COLS` in the code above. How do your answers change? Can you spot a pattern?  \n",
-    "\n",
-    "*(Record your thoughts below.)*  \n"
+    "## Challenge Problems\n",
+    "1. **Find the tipping point** – With the tool above, what is the **greatest** number of strands you managed to cut while the net remained intact?\n",
+    "2. **Guarantee a split** – What is the **smallest** number of strands that must be cut to *ensure* the net splits, no matter which strands they are? Can you explain why?\n",
+    "3. **Scale it up** – Change `ROWS` and `COLS` in the code cell and look for patterns.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a177ca6",
+   "id": "39cbcb6d",
    "metadata": {},
    "source": [
-    "## Real‑World Extension  \n",
-    "\n",
-    "*Tie your own mini‑net.*  \n",
-    "1. Arrange strings into a 3 × 4 grid and tie simple overhand knots at the crossings.  \n",
-    "2. Use scissors to cut strands one at a time.  \n",
-    "3. Compare when your physical net splits with what the model predicted.  \n",
-    "\n",
-    "Upload a photo of your net here if your platform allows!  \n"
+    "## Real‑World Extension\n",
+    "Tie a small string grid (e.g., 3 × 4). Cut strands and compare when your physical net splits to the model.\n",
+    "Upload a photo or describe what you observe.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3f9aebd8",
+   "id": "3ca242a6",
    "metadata": {},
    "source": [
-    "### Reflection Journal  \n",
-    "\n",
-    "*What surprised you today?*  \n",
-    "*Which mistake taught you something useful?*  \n"
+    "### Reflection Journal\n",
+    "- What surprised you today?\n",
+    "- Which mistake turned out to be helpful?\n"
    ]
   }
  ],
@@ -222,7 +223,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.11"
+   "version": "3.x"
   }
  },
  "nbformat": 4,
