Update Week 1 notebook to use standard Matplotlib backend and specify Python version 3.11.11

--- a/Week1_Build_a_Better_Fishing_Net.ipynb
+++ b/Week1_Build_a_Better_Fishing_Net.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Interactive backend for Matplotlib – required on Binder\n",
-    "%matplotlib widget\n",
+    "%matplotlib\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
@@ -223,7 +223,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.x"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
