Enhance .gitignore for Python projects, update requirements to include ipympl, and refine Week 1 notebook with improved markdown, interactive features, and code clarity for fishing net exploration.

--- a/Week1_Build_a_Better_Fishing_Net.ipynb
+++ b/Week1_Build_a_Better_Fishing_Net.ipynb
@@ -2,65 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f1c2cf1",
+   "id": "4d97cf54",
    "metadata": {},
    "source": [
     "# Week 1 – Build a Better Fishing Net\n",
-    "### Exploring grids, cuts & connectivity\n",
+    "### Interactive exploration of grids & connectivity\n",
     "\n",
-    "> **Starter notebook – please duplicate**\n",
-    "> Go to **File ▸ Save a Copy** (or use a **Duplicate** button) before editing so you keep your own version.\n"
+    "> **Instructions**  \n",
+    "> 1. **Duplicate** this notebook (File ▸ Save a Copy) so your edits don’t change the master.  \n",
+    "> 2. Run cells top‑to‑bottom.  \n",
+    "> 3. Click strands to cut/restore them – watch the status update.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ecf08e88",
+   "id": "604c2cdc",
    "metadata": {},
    "source": [
-    "## The Story\n",
-    "Fishing villages weave rectangular nets by tying ropes into a grid of knots.\n",
-    "A torn net lets fish escape – and you lose dinner!\n",
-    "\n",
-    "**Mission**: Explore **how many strands you can cut, and which ones, before the net falls into two separate pieces**.\n",
-    "\n",
-    "**You will practice**\n",
-    "- Visual reasoning with grids\n",
-    "- Graph ideas: *nodes*, *edges*, *connectedness*\n",
-    "- A first taste of Python & interactive widgets\n"
+    "## Why nets matter\n",
+    "If you cut too many ropes in a fishing net, fish slip through the gap and escape.  \n",
+    "Today you’ll investigate **how a grid‑shaped net breaks apart** and discover some graph theory along the way."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de25c2e4",
+   "id": "8feb831a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interactive backend for Matplotlib – required on Binder\n",
+    "# Interactive backend (needs the ipympl / jupyter-matplotlib package)\n",
+    "import ipympl\n",
     "%matplotlib\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import random\n",
     "import ipywidgets as widgets\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a187975f",
+   "id": "0382a2a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_intact_net(rows=5, cols=7, lw=2):\n",
-    "    \"\"\"Draw a fresh rows×cols fishing net.\"\"\"\n",
+    "    \"\"\"Draws a fresh rows×cols grid‑net.\"\"\"\n",
     "    plt.figure(figsize=(cols, rows))\n",
     "    for r in range(rows):\n",
     "        for c in range(cols):\n",
-    "            # horizontal strand\n",
-    "            if c < cols - 1:\n",
+    "            if c < cols - 1:                # horizontal\n",
     "                plt.plot([c, c + 1], [rows - r]*2, 'k-', linewidth=lw)\n",
-    "            # vertical strand\n",
-    "            if r < rows - 1:\n",
+    "            if r < rows - 1:                # vertical\n",
     "                plt.plot([c]*2, [rows - 1 - r, rows - r], 'k-', linewidth=lw)\n",
     "    plt.axis('off')\n",
     "    plt.title('A brand‑new fishing net – no cuts yet!')\n",
@@ -70,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12dbb18f",
+   "id": "ae0bf4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +72,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec81167",
+   "id": "e8d8ea84",
    "metadata": {},
    "source": [
-    "### Predict\n",
-    "If you cut **one** strand, can the net ever split? What about **ten** strands?\n",
-    "Write your guess before you test:\n",
+    "### Predict first\n",
+    "If you cut **one** strand, can the net split? How few cuts *guarantee* a split?  \n",
+    "Write your guess here before experimenting:\n",
     "\n",
     "`Your prediction:`\n"
    ]
@@ -92,126 +85,135 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a94f14d",
+   "id": "460ac674",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -------------------------------------------------------------\n",
-    "# Click‑to‑Cut Fishing Net Explorer\n",
-    "# -------------------------------------------------------------\n",
-    "ROWS, COLS = 5, 7  # change me!\n",
+    "# ----------------------------------------------------------\n",
+    "# Click‑to‑Cut Net Explorer  (interactive)\n",
+    "# ----------------------------------------------------------\n",
+    "ROWS, COLS = 5, 7         # tweak for larger/smaller nets\n",
     "\n",
-    "def all_edges(rows, cols):\n",
+    "# Build list of all strands\n",
+    "def build_edges(rows, cols):\n",
     "    e = []\n",
     "    for r in range(rows):\n",
     "        for c in range(cols):\n",
-    "            if c < cols - 1:   # horizontal\n",
-    "                e.append(((r, c), (r, c + 1)))\n",
-    "            if r < rows - 1:   # vertical\n",
-    "                e.append(((r, c), (r + 1, c)))\n",
+    "            if c < cols - 1: e.append(((r,c), (r,  c+1)))  # horizontal\n",
+    "            if r < rows - 1: e.append(((r,c), (r+1,c)))    # vertical\n",
     "    return e\n",
     "\n",
-    "edges = all_edges(ROWS, COLS)\n",
+    "edges = build_edges(ROWS, COLS)\n",
+    "cut_edges = set()          # user‑selected cuts\n",
     "edge2line = {}\n",
-    "cut_edges = set()\n",
     "\n",
-    "def is_connected(kept_edges):\n",
-    "    if not kept_edges:\n",
-    "        return False\n",
+    "def is_connected(kept):\n",
+    "    if not kept: return False\n",
     "    graph = {}\n",
-    "    for a, b in kept_edges:\n",
-    "        graph.setdefault(a, []).append(b)\n",
-    "        graph.setdefault(b, []).append(a)\n",
+    "    for a,b in kept:\n",
+    "        graph.setdefault(a,[]).append(b)\n",
+    "        graph.setdefault(b,[]).append(a)\n",
     "    start = next(iter(graph))\n",
     "    seen, stack = set(), [start]\n",
     "    while stack:\n",
-    "        n = stack.pop()\n",
-    "        if n in seen:\n",
-    "            continue\n",
-    "        seen.add(n)\n",
-    "        stack.extend(graph[n])\n",
+    "        node = stack.pop()\n",
+    "        if node in seen: continue\n",
+    "        seen.add(node)\n",
+    "        stack.extend(graph[node])\n",
     "    return len(seen) == ROWS * COLS\n",
     "\n",
+    "# Create figure\n",
     "fig, ax = plt.subplots(figsize=(COLS, ROWS))\n",
-    "ax.set_aspect('equal')\n",
+    "ax.set_aspect('equal', adjustable='box')\n",
     "ax.axis('off')\n",
     "ax.set_xlim(-0.5, COLS + 0.5)\n",
     "ax.set_ylim(-0.5, ROWS + 0.5)\n",
     "\n",
     "def draw_grid():\n",
     "    edge2line.clear()\n",
-    "    for (a, b) in edges:\n",
-    "        x = [a[1], b[1]]\n",
-    "        y = [ROWS - a[0], ROWS - b[0]]\n",
-    "        line, = ax.plot(x, y, 'k-', linewidth=2, picker=5)\n",
-    "        edge2line[(a, b)] = line\n",
+    "    ax.clear()\n",
+    "    ax.set_aspect('equal')\n",
+    "    ax.axis('off')\n",
+    "    ax.set_xlim(-0.5, COLS + 0.5)\n",
+    "    ax.set_ylim(-0.5, ROWS + 0.5)\n",
+    "    for edge in edges:\n",
+    "        (r1,c1),(r2,c2) = edge\n",
+    "        x = [c1, c2]\n",
+    "        y = [ROWS - r1, ROWS - r2]      # flip y so row0 is bottom\n",
+    "        intact = edge not in cut_edges\n",
+    "        color = 'k' if intact else 'r'\n",
+    "        style = '-' if intact else '--'\n",
+    "        line, = ax.plot(x, y, color=color, linestyle=style,\n",
+    "                        linewidth=2)\n",
+    "        line.set_picker(True)\n",
+    "        line.set_pickradius(5)          # 5 px tolerance\n",
+    "        edge2line[edge] = line\n",
     "    fig.canvas.draw_idle()\n",
+    "\n",
+    "# Status widget\n",
+    "status = widgets.HTML()\n",
     "\n",
     "def update_status():\n",
     "    kept = [e for e in edges if e not in cut_edges]\n",
-    "    ok = is_connected(kept)\n",
-    "    message = f\"<b>Cuts:</b> {len(cut_edges)} <b>Net intact?</b> \"\n",
-    "    message += \"✅ YES\" if ok else \"<span style='color:red;font-weight:bold;'>❌ NO – It split!</span>\"\n",
-    "    status.value = message\n",
+    "    intact = is_connected(kept)\n",
+    "    txt = f\"<b>Cuts:</b> {len(cut_edges)}  <b>Net intact?</b> \"\n",
+    "    txt += \"✅ YES\" if intact else \"<span style='color:red;font-weight:bold;'>❌ NO – It split!</span>\"\n",
+    "    status.value = txt\n",
     "\n",
     "def on_pick(event):\n",
-    "    edge = next(e for e, l in edge2line.items() if l is event.artist)\n",
+    "    # Identify clicked edge\n",
+    "    clicked_line = event.artist\n",
+    "    edge = next(e for e,l in edge2line.items() if l is clicked_line)\n",
     "    if edge in cut_edges:\n",
     "        cut_edges.remove(edge)\n",
-    "        edge2line[edge].set(color='k', linestyle='-')\n",
     "    else:\n",
     "        cut_edges.add(edge)\n",
-    "        edge2line[edge].set(color='r', linestyle='--')\n",
+    "    draw_grid()\n",
     "    update_status()\n",
-    "    fig.canvas.draw_idle()\n",
     "\n",
-    "draw_grid()\n",
     "fig.canvas.mpl_connect('pick_event', on_pick)\n",
     "\n",
-    "status = widgets.HTML()\n",
-    "update_status()\n",
-    "\n",
+    "# Reset button\n",
     "reset_btn = widgets.Button(description='Reset net', button_style='info')\n",
     "def _reset(b):\n",
     "    cut_edges.clear()\n",
-    "    for l in edge2line.values():\n",
-    "        l.set(color='k', linestyle='-')\n",
+    "    draw_grid()\n",
     "    update_status()\n",
-    "    fig.canvas.draw_idle()\n",
     "reset_btn.on_click(_reset)\n",
     "\n",
+    "draw_grid()\n",
+    "update_status()\n",
     "display(widgets.VBox([status, reset_btn]))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a0ae960e",
+   "id": "68a1d137",
    "metadata": {},
    "source": [
     "## Challenge Problems\n",
-    "1. **Find the tipping point** – With the tool above, what is the **greatest** number of strands you managed to cut while the net remained intact?\n",
-    "2. **Guarantee a split** – What is the **smallest** number of strands that must be cut to *ensure* the net splits, no matter which strands they are? Can you explain why?\n",
-    "3. **Scale it up** – Change `ROWS` and `COLS` in the code cell and look for patterns.\n"
+    "1. **Tipping point** – How many strands can you cut while the net stays intact?  \n",
+    "2. **Certain split** – What’s the smallest number of strands that *guarantees* a split, no matter which you pick?  \n",
+    "3. **Scale test** – Change `ROWS, COLS` and look for patterns.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "39cbcb6d",
+   "id": "f847dc73",
    "metadata": {},
    "source": [
     "## Real‑World Extension\n",
-    "Tie a small string grid (e.g., 3 × 4). Cut strands and compare when your physical net splits to the model.\n",
-    "Upload a photo or describe what you observe.\n"
+    "Build a mini‑net from string (e.g., 3 × 4). Cut strands physically and compare when it splits with your simulation."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ca242a6",
+   "id": "8114f184",
    "metadata": {},
    "source": [
     "### Reflection Journal\n",
-    "- What surprised you today?\n",
-    "- Which mistake turned out to be helpful?\n"
+    "- Which mistake taught you the most?  \n",
+    "- Describe an extreme case that clarified your thinking.\n"
    ]
   }
  ],
@@ -223,7 +225,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.11"
+   "version": "3.x"
   }
  },
  "nbformat": 4,
